--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drawing",
   "version": "0.0.1",
   "private": true,
+  "workspaces": ["src/*"],
   "devDependencies": {
     "shadow-cljs": "2.25.3"
   },
